#2 Fixed main class in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,5 @@ dependencies {
 
 application {
     // Define the main class for the application
-    mainClassName = 'com.okta.netty.AppServer'
+    mainClassName = 'org.alexside.netty.server.BrokerServer'
 }
